# drone_yolo_detection_ipqm

./: .dockerignore  .gitignore  Dockerfile  README.md  build_library.sh  pyproject.toml  requirements.txt
drone_service/: compare_methods.py  preprocess_videos.py
drone_service/src/: __init__.py  main.py
examples/: dcm_usage_example.py
src/: detector.py  detector_old.py  enhanced_detector.py  estimation.py  example.env  main.py  test_tracking.py  weapon_detector.py
src/drone_people_detector/: __init__.py  drone_people_detector.py
src/drone_people_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/drone_people_detector/core/: camera.py  detector.py  enhanced_detector.py  estimation.py  monocular_vision_submodule.py  tracks.py  viewer.py  weapon_detector.py
src/drone_service/: .env  app.py  config.py  di.py  main.py  main_socket.py  main_socket_local.py  requirements.txt  test_socket_receiver.py  viewer.py
src/drone_service/routes/: integracao_controller.py
src/drone_service/socket_testing/examples/: cellphone_client.py
src/drone_service/src/config/: __init__.py
src/drone_service/src/services/: frame_preprocessor.py  socket_video_capture.py  socket_video_receiver.py  streamer.py
src/drone_service/src/services/broker/: __init__.py  broker.py
src/mock-video/: broker.py  di.py  main.py  stream.py
src/new/: PersonTrack.py  camera.py  classification.py  estimation_submodule.py  monocular_vision_submodule.py  tmm.py
src/testing/: analyze_metrics.py
src/testing/src/: config.py  detector.py  main.py
